# sample-python-project

./: .dockerignore  .env.copy  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
sample_python_project/: main.py
